--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;600;700;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,21 @@
 
 :root {
   font-size: 62.5%;
+
+  --purple: #7c3aed;
+  --light-purple: #9f67ff;
+  --white: #ffffff;
+  --error: #ed3a5a;
+  --gray-50: #f8fafc;
+  --gray-100: #f1f5f9;
+  --gray-200: #e2e8f0;
+  --gray-300: #cbd5e1;
+  --gray-400: #94a3b8;
+  --gray-500: #64748b;
+  --gray-600: #475569;
+  --gray-700: #334155;
+  --gray-800: #1e293b;
+  --gray-900: #0f172a;
 }
 
 body {
